--- a/index.html
+++ b/index.html
@@ -72,18 +72,77 @@
             <div class="gallery-container">
                 <h3>Our Precious Memories 📸</h3>
                 <div class="photo-grid">
-                    <div class="photo-card"><img src="images/pic1.jpeg"></div>
-                    <div class="photo-card"><img src="images/pic2.jpeg"></div>
-                    <div class="photo-card"><img src="images/pic3.jpeg"></div>
-                    <div class="photo-card"><img src="images/pic4.jpeg"></div>
-                    <div class="photo-card"><img src="images/pic5.jpeg"></div>
-                    <div class="photo-card"><img src="images/pic6.jpeg"></div>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="images/pic1.jpeg" alt="Photo 1">
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Love Letter for Photo 1 ❤️</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="images/pic2.jpeg" alt="Photo 2">
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Love Letter for Photo 2 ❤️</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="images/pic3.jpeg" alt="Photo 3">
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Love Letter for Photo 3 ❤️</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="images/pic4.jpeg" alt="Photo 4">
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Love Letter for Photo 4 ❤️</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="images/pic5.jpeg" alt="Photo 5">
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Love Letter for Photo 5 ❤️</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="images/pic6.jpeg" alt="Photo 6">
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Love Letter for Photo 6 ❤️</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
