--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- Main Content Wrapper -->
     <div id="main-wrapper" style="display:none;">
         <div id="main-content">
+            <!-- Header -->
             <div class="green-header">
                 <h2>Happy Birthday Love!</h2>
                 <p>To My Handsome Boyfriend A'in</p>
@@ -33,12 +34,14 @@
                 <div class="emojis">✨ ❤️ ✨</div>
             </div>
 
+            <!-- Cake Section -->
             <div class="card cake-section">
                 <img src="images/cake.png.png" id="cake" alt="Birthday Cake">
                 <h3>Make a Wish! ✨</h3>
                 <button onclick="blowCandle()">Blow out the candle!</button>
             </div>
 
+            <!-- Anniversary Unlock -->
             <div class="card">
                 <h3>Unlock My Love Letter 💖</h3>
                 <p>Enter our anniversary date:</p>
@@ -47,6 +50,7 @@
                 <button onclick="unlockLetter()">Unlock Letter 💌</button>
             </div>
 
+            <!-- Love Letter -->
             <div class="card love-letter-section" id="love-letter" style="display:none;">
                 <h3>My Love Letter 💌</h3>
                 <p class="love-letter-text">
@@ -59,6 +63,7 @@
                 </p>
             </div>
 
+            <!-- Timer -->
             <div class="card timer-section">
                 <h3>Time Since You Said "YES" 💍</h3>
                 <div id="timer">
@@ -69,72 +74,44 @@
                 </div>
             </div>
 
+            <!-- Photo Gallery with Flip Letters -->
             <div class="gallery-container">
                 <h3>Our Precious Memories 📸</h3>
                 <div class="photo-grid">
                     <div class="flip-card">
                         <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="images/pic1.jpeg" alt="Photo 1">
-                            </div>
-                            <div class="flip-card-back">
-                                <p>Love Letter for Photo 1 ❤️</p>
-                            </div>
+                            <div class="flip-card-front"><img src="images/pic1.jpeg" alt="Photo 1"></div>
+                            <div class="flip-card-back"><p>Love Letter 1 ❤️</p></div>
                         </div>
                     </div>
-
                     <div class="flip-card">
                         <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="images/pic2.jpeg" alt="Photo 2">
-                            </div>
-                            <div class="flip-card-back">
-                                <p>Love Letter for Photo 2 ❤️</p>
-                            </div>
+                            <div class="flip-card-front"><img src="images/pic2.jpeg" alt="Photo 2"></div>
+                            <div class="flip-card-back"><p>Love Letter 2 ❤️</p></div>
                         </div>
                     </div>
-
                     <div class="flip-card">
                         <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="images/pic3.jpeg" alt="Photo 3">
-                            </div>
-                            <div class="flip-card-back">
-                                <p>Love Letter for Photo 3 ❤️</p>
-                            </div>
+                            <div class="flip-card-front"><img src="images/pic3.jpeg" alt="Photo 3"></div>
+                            <div class="flip-card-back"><p>Love Letter 3 ❤️</p></div>
                         </div>
                     </div>
-
                     <div class="flip-card">
                         <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="images/pic4.jpeg" alt="Photo 4">
-                            </div>
-                            <div class="flip-card-back">
-                                <p>Love Letter for Photo 4 ❤️</p>
-                            </div>
+                            <div class="flip-card-front"><img src="images/pic4.jpeg" alt="Photo 4"></div>
+                            <div class="flip-card-back"><p>Love Letter 4 ❤️</p></div>
                         </div>
                     </div>
-
                     <div class="flip-card">
                         <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="images/pic5.jpeg" alt="Photo 5">
-                            </div>
-                            <div class="flip-card-back">
-                                <p>Love Letter for Photo 5 ❤️</p>
-                            </div>
+                            <div class="flip-card-front"><img src="images/pic5.jpeg" alt="Photo 5"></div>
+                            <div class="flip-card-back"><p>Love Letter 5 ❤️</p></div>
                         </div>
                     </div>
-
                     <div class="flip-card">
                         <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="images/pic6.jpeg" alt="Photo 6">
-                            </div>
-                            <div class="flip-card-back">
-                                <p>Love Letter for Photo 6 ❤️</p>
-                            </div>
+                            <div class="flip-card-front"><img src="images/pic6.jpeg" alt="Photo 6"></div>
+                            <div class="flip-card-back"><p>Love Letter 6 ❤️</p></div>
                         </div>
                     </div>
                 </div>
